--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -42,7 +42,8 @@
         "--cap-add=SYS_PTRACE",
         "--security-opt=seccomp:unconfined",
         "--security-opt=apparmor:unconfined",
-        "--privileged"
+        "--privileged",
+        "--gpus", "all"
     ],
     "containerEnv": {
         "DISPLAY": "${localEnv:DISPLAY}",
