--- a/.devcontainer/Dockerfile.devcontainer
+++ b/.devcontainer/Dockerfile.devcontainer
@@ -88,6 +88,7 @@ RUN chown -R ${USERNAME}:root /home/${USERNAME}/ros2_ws
 RUN sudo pip3 install osqp
 RUN sudo pip3 install casadi
 RUN sudo pip3 install "fastapi[standard]"
+RUN sudo pip3 install requests
 
 USER ${USERNAME}
 
