--- a/src/ros/yt_recorder/config/params.yaml
+++ b/src/ros/yt_recorder/config/params.yaml
@@ -4,27 +4,26 @@ initialize_origin:
     local_xy_gpsfix_topic: gps
     local_xy_navsatfix_topic: fix
     local_xy_origin: swri
-    local_xy_origins: '[{"name": "swri",                 
-                         "latitude": 53.75,
-                         "longitude": 21.7,
-                         "altitude": 10.0,
-                         "heading": 0.0},
-                        {"name": "back_40",
-                         "latitude": 29.447507,
-                         "longitude":50,
-                         "altitude": 50.0, 
-                         "heading": 0.0} 
-                     ]'
+    local_xy_origins: '[{"name": "swri",
+      "latitude": 53.75,
+      "longitude": 21.7,
+      "altitude": 10.0,
+      "heading": 0.0},
+      {"name": "back_40",
+      "latitude": 29.447507,
+      "longitude":50,
+      "altitude": 50.0,
+      "heading": 0.0}
+      ]'
     use_sim_time: true
 
 sail_1:
   ros__parameters:
-    path_filename: 'path_sniardwy.json'
+    path_filename: "path_sniardwy.json"
     sim_mode: True
-    id: 'sail_1'
-
-sail_2:
-  ros__parameters:
-    path_filename: 'path_gizycko_sniardwy.json'
-    sim_mode: True
-    id: 'sail_2'
+    id: 1
+# sail_2:
+#   ros__parameters:
+#     path_filename: "path_gizycko_sniardwy.json"
+#     sim_mode: True
+#     id: 2
